# mpecss

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/: copilot-instructions.md
benchmarks/: README.md
benchmarks/macmpec/: README.md
benchmarks/mpeclib/: README.md  SHA256SUMS.txt  convert_mpeclib.py
benchmarks/nosbench/: README.md
kaggle_setup/: MPECSS_Kaggle_MPECLib.ipynb  MPECSS_Kaggle_MacMPEC.ipynb  MPECSS_Kaggle_MacMPEC_Ablation_FixedPhaseII.ipynb  MPECSS_Kaggle_MacMPEC_Ablation_NoPhaseI.ipynb  MPECSS_Kaggle_MacMPEC_ParamSensitivity_kappa_0p3.ipynb  MPECSS_Kaggle_MacMPEC_ParamSensitivity_kappa_0p8.ipynb  MPECSS_Kaggle_MacMPEC_ParamSensitivity_t0_0p1.ipynb  MPECSS_Kaggle_MacMPEC_ParamSensitivity_t0_10.ipynb  MPECSS_Kaggle_MacMPEC_SeedRobustness_Seed11.ipynb  MPECSS_Kaggle_MacMPEC_SeedRobustness_Seed123.ipynb  MPECSS_Kaggle_NosBench_Group1.ipynb  MPECSS_Kaggle_NosBench_Group2.ipynb  MPECSS_Kaggle_NosBench_Group3.ipynb  MPECSS_Kaggle_NosBench_Group4.ipynb  MPECSS_Kaggle_NosBench_Group5.ipynb  MPECSS_Kaggle_NosBench_Group6.ipynb  README.md  resumable_benchmark.py  study_runner.py
mpecss/: README.md  __init__.py  contracts.py
mpecss/benchmark/: README.md  __init__.py  benchmark_audit.py  benchmark_failure.py  benchmark_results.py  benchmark_utils.py
mpecss/helpers/: README.md  __init__.py  benchmark_failure.py  benchmark_results.py  benchmark_utils.py  comp_residuals.py  (+16 more)
results/: README.md
tests/: test_benchmark_utils.py  test_bstationarity.py  test_mcp_loader_constraints.py  test_mcp_residuals.py
(+5256 files in other folders)
