[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mpecss"
version = "1.0.3"
requires-python = ">=3.10"

dependencies = [
    "casadi>=3.6.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "psutil>=5.9",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mpecss*"]
